--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-    "name": "node-NetworkIP"
+    "name": "myip"
   , "version": "0.0.1"
   , "description": "Simple module to get IP of the platform"
   , "keywords": ["Network", "IP"]
-  , "repository" :
-	  { "type" : "git"
+  , "repository" : { "type" : "git"
 	    , "url" : "http://github.com/reregistered/node-NetworkIP.git"
-	  }
-  , "author": "Dov Amihod "
+	}
+  , "author": "Neekey"
   , "dependencies": {
   }
   , "main": "index"
-  , "engines": { "node": ">= 0.4.0 < 0.7.0" }
 }
